[package]
name = "differ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
difference = "2.0.0"
itertools = "0.11.0"
serde = { version = "1.0.190", features = ["derive"] }
tempfile = "3.8.0"
